--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,7 @@ jobs:
           docker-password: ${{ secrets.GITHUB_TOKEN }}
 
       # https://github.com/shrink/actions-docker-registry-tag
-      - name: Add a "latest" docker tag
+      - name: Add a "unstable" docker tag
         uses: shrink/actions-docker-registry-tag@v4
         with:
           registry: ghcr.io
@@ -170,3 +170,59 @@ jobs:
           docker-username: 'noi-techpark-bot'
           docker-password: ${{ secrets.GH_PERSONAL_ACCESS_TOKEN }}
           project-name: ${{ env.PROJECT_NAME }}
+
+  # Deploy Prod
+  deploy-prod-k8s:
+    runs-on: ubuntu-24.04
+    if: github.ref == 'refs/heads/k8s-prod'
+    needs: test
+    environment: prod
+    concurrency: deploy-prod
+    steps:
+      - name: Checkout source code
+        uses: actions/checkout@v2
+
+      - name: Build project
+        uses: noi-techpark/github-actions/maven-build@v2
+        with:
+          java-version: ${{ env.JAVA_VERSION }}
+          build-command: 'mvn -B -DskipTests package'
+
+      - name: Build and push images
+        uses: noi-techpark/github-actions/docker-build-and-push@v2
+        with:
+          docker-username: ${{ github.actor }}
+          docker-password: ${{ secrets.GITHUB_TOKEN }}
+
+      # https://github.com/shrink/actions-docker-registry-tag
+      - name: Add a "latest" docker tag
+        uses: shrink/actions-docker-registry-tag@v4
+        with:
+          registry: ghcr.io
+          repository: ${{ github.repository }}/${{ github.event.repository.name }}-app
+          target: ${{ env.DOCKER_TAG }}
+          tags: |
+            latest
+            
+      - name: Customize values.yaml
+        run: |
+          yq -i '
+            .image.repository="${{ env.DOCKER_IMAGE }}" |
+            .image.tag="${{ env.DOCKER_TAG }}" |
+            .image.pullPolicy="IfNotPresent" |
+
+            .env.LOG_APPLICATION_VERSION="${{ env.DOCKER_TAG }}" |
+            .oauth.clientSecret="${{ secrets.PROD_KEYCLOAK_CLIENT_SECRET }}"
+          ' infrastructure/helm/prod.yaml
+      
+      - name: Deploy on cluster  
+        uses: noi-techpark/github-actions/helm-deploy@v2
+        with:
+          k8s-name: ninja-api
+          k8s-namespace: core
+          chart-path: infrastructure/helm/ninja-api
+          values-file: infrastructure/helm/prod.yaml
+          aws-access-key-id: ${{ secrets[vars.AWS_KEY_ID] }}
+          aws-secret-access-key: ${{ secrets[vars.AWS_KEY_SECRET] }}
+          aws-eks-cluster-name: aws-main-eu-01
+          aws-region: eu-west-1
