--- a/infrastructure/helm/prod.yaml
+++ b/infrastructure/helm/prod.yaml
@@ -14,6 +14,8 @@ ingress:
       paths:
         - path: "/"
           pathType: Prefix
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: 50m
 
 env: 
   # Ninja
