--- a/infrastructure/helm/test.yaml
+++ b/infrastructure/helm/test.yaml
@@ -10,6 +10,8 @@ ingress:
       paths:
         - path: "/"
           pathType: Prefix
+  annotations:
+    nginx.ingress.kubernetes.io/proxy-body-size: 50m
 
 env: 
   # Ninja
