--- a/infrastructure/docker/Dockerfile
+++ b/infrastructure/docker/Dockerfile
@@ -1,4 +1,4 @@
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /ninja
 COPY target/v2.jar /ninja/v2.jar
-CMD [ "java", "-jar", "v2.jar" ]
+CMD java $JAVA_OPTS -jar v2.jar
