fix: remove duplicate garbage collector arg

--- a/infrastructure/helm/test.yaml
+++ b/infrastructure/helm/test.yaml
@@ -47,7 +47,7 @@ env:
   NINJA_QUOTA_HISTORY_URL: https://github.com/noi-techpark/odh-docs/wiki/Api-Quota
   
   # Set JVM arguments
-  JAVA_OPTS: -XX:MaxRAMPercentage=85 -XX:+UseParallelGC -XX:+UseZGC -XX:ZUncommitDelay=300
+  JAVA_OPTS: -XX:MaxRAMPercentage=85 -XX:+UseZGC -XX:ZUncommitDelay=300
 
 database:
   servicebindName: "postgres-read-svcbind"
